--- a/app/build.gradle
+++ b/app/build.gradle
@@ -1,6 +1,5 @@
-plugins {
-    id 'com.android.application'
-}
+apply plugin: 'com.android.application'
+apply plugin: 'com.google.gms.google-services'
 
 android {
     compileSdk 30
@@ -41,4 +40,7 @@ dependencies {
     implementation 'com.github.ibm-cloud-security:appid-clientsdk-android:6.0.1'
     implementation 'com.google.code.gson:gson:2.8.7'
     implementation 'com.facebook.shimmer:shimmer:0.5.0'
+    implementation 'com.android.volley:volley:1.2.1'
+    implementation platform('com.google.firebase:firebase-bom:29.0.0')
+    implementation 'com.google.firebase:firebase-auth:21.0.1'
 }
