--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -1,5 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
+    xmlns:tools="http://schemas.android.com/tools"
     package="com.dream.grabngo">
 
     <uses-permission android:name="android.permission.INTERNET" />
@@ -16,7 +17,9 @@
         android:label="@string/app_name"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
-        android:theme="@style/Theme.GrabNGo">
+        android:networkSecurityConfig="@xml/network_security_config"
+        android:theme="@style/Theme.GrabNGo"
+        tools:targetApi="n">
         <activity
             android:name=".Activities.LoginActivity"
             android:exported="true" />
