Progress Steps Modified!

--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,5 +45,5 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-auth:21.0.1'
 
-    implementation 'com.anton46:stepsview:0.0.2'
+    implementation 'com.github.baoyachi:StepView:1.9'
 }
