--- a/app/build.gradle
+++ b/app/build.gradle
@@ -44,4 +44,8 @@ dependencies {
     implementation 'com.android.volley:volley:1.2.1'
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-auth:21.0.1'
+
+    implementation('com.github.dhaval2404:imagepicker:2.1') {
+        exclude group: 'org.jetbrains', module: 'annotations'
+    }
 }
