--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,6 @@ dependencies {
     implementation platform('com.google.firebase:firebase-bom:29.0.0')
     implementation 'com.google.firebase:firebase-auth:21.0.1'
 
-    implementation('com.github.dhaval2404:imagepicker:2.1') {
-        exclude group: 'org.jetbrains', module: 'annotations'
-    }
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+    implementation 'com.google.android.gms:play-services-vision:20.1.3'
 }
